--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^2.2.0",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.5.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
